--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <div class="navBar">
         <a href="index.html">
-          <img src="./Imagenes/inicio/LogoKrypical.jpeg" alt="" />
+          <img src="./Imagenes/inicio/LogoKrypical.jpg" alt="" />
         </a>
         <nav>
           <ul>
@@ -44,7 +44,7 @@
     </header>
     <section class="banner wow fadeInLeft">
       <a href="">
-        <img src="Imagenes/Inicio/Banner 1.jpg" alt="" />
+        <img src="Imagenes/Inicio/Banner1.jpg" alt="" />
       </a>
     </section>
     <main id="prodmain">
@@ -60,14 +60,14 @@
         <div class="productos">
           <img
             class="producto__item wow fadeInLeftBig"
-            src="Imagenes/Inicio/beauveria bassiana neem.jpg"
+            src="Imagenes/Inicio/beauveriabassiananeem.jpg"
             alt=""
           />
           <img class="producto__item wow fadeIn " data-wow-duration="4s""
-          src="Imagenes/Inicio/Sustrato VAMP 10L.jpg" alt="" />
+          src="Imagenes/Inicio/SustratoVAMP10L.jpg" alt="" />
           <img
             class="producto__item wow fadeInRightBig"
-            src="Imagenes/Inicio/Vamp gallina veg.jpg"
+            src="Imagenes/Inicio/Vampgallinaveg.jpg"
             alt=""
           />
         </div>
@@ -91,9 +91,9 @@
       <section class="pagos">
         <h2>Medios de Pago</h2>
         <div>
-          <img src="./imagenes/Inicio/mastercard_PNG3.png" alt="" />
-          <img src="./imagenes/Inicio/visa_PNG10.png" alt="" />
-          <img src="./imagenes/Inicio/american.png" alt="" />
+          <img src="./imagenes/Inicio/mastercard.jpg" alt="" />
+          <img src="./imagenes/Inicio/visa.jpg" alt="" />
+          <img src="./imagenes/Inicio/american.jpg" alt="" />
         </div>
       </section>
     </footer>
