--- a/fertilizantes.html
+++ b/fertilizantes.html
@@ -21,7 +21,7 @@
     <header>
       <div class="navBar">
         <a href="index.html">
-          <img src="Imagenes/inicio/LogoKrypical.jpeg" alt="" />
+          <img src="Imagenes/inicio/LogoKrypical.jpg" alt="" />
         </a>
         <nav>
           <ul>
@@ -95,9 +95,9 @@
       <section class="pagos">
         <h2>Medios de Pago</h2>
         <div>
-          <img src="imagenes/Inicio/mastercard_PNG3.png" alt="" />
-          <img src="imagenes/Inicio/visa_PNG10.png" alt="" />
-          <img src="imagenes/Inicio/american.png" alt="" />
+          <img src="imagenes/Inicio/mastercard.jpg" alt="" />
+          <img src="imagenes/Inicio/visa.jpg" alt="" />
+          <img src="imagenes/Inicio/american.jpg" alt="" />
         </div>
       </section>
     </footer>
